--- a/.github/workflows/gemstash-ci.yml
+++ b/.github/workflows/gemstash-ci.yml
@@ -1,11 +1,6 @@
 name: Gemstash-Tests
 
-on:
-  pull_request:
-
-  push:
-    branches:
-      - master
+on: [push, pull_request]
 
 jobs:
   gemstash_tests:
