--- a/.github/workflows/gemstash-ci.yml
+++ b/.github/workflows/gemstash-ci.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler: none
+          wait-on: tcp://0.0.0.0:9041, tcp://0.0.0.0:9042, tcp://0.0.0.0:9043, tcp://0.0.0.0:9044
       - name: increase ulimit
         run: ulimit -n 8192
       - name: Install Dependencies
