--- a/.github/workflows/gemstash-ci.yml
+++ b/.github/workflows/gemstash-ci.yml
@@ -19,8 +19,10 @@ jobs:
           wait-on: tcp://0.0.0.0:9041, tcp://0.0.0.0:9042, tcp://0.0.0.0:9043, tcp://0.0.0.0:9044
       - name: increase ulimit
         run: ulimit -n 8192
+      - name: Update rubygems
+        run: gem update --system
       - name: Install Dependencies
-        run: gem install bundler -v 1.17.3 && bin/setup
+        run: gem install bundler && bin/setup
       - name: Run Tests
         run: bundle exec rspec --exclude-pattern "spec/integration_spec.rb"
       - name: Run Integration Tests
